<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_joint_impedance_controller</name>
  <version>0.1.0</version>
  <description>
    Simplified joint-space PD impedance controller for UR robots.
    tau = K (q_d - q) + D (qdot_d - qdot), with per-joint torque and
    torque-rate saturation, URDF joint-limit clamping on the target,
    and seed-on-activate hold pose.
  </description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>generate_parameter_library</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
